--- a/index.html
+++ b/index.html
@@ -1,7 +1,22 @@
 <!DOCTYPE html>
 <html>
 <body>
-	<h1>Oops!</h1>
-	<p>I'm hosted with GitHub Pages.</p>
+	<h1>Welcome to Tim (Zhiyuan) Liu's Portfolio</h1>
+	<hr>
+	<h2>About me</h2>
+	<ul>
+		<li><a href="https://www.linkedin.com/in/timzhiyuanliu">Linked-in Profile</a></li>
+		<li><a href="mailto:bluekvirus@gmail.com">CV (available on request)</a></li>
+	</ul>
+
+	<h2>Projects</h2>
+	<ul>
+		<li><a href="http://bluekvirus.github.io/Stage.js/">Stage.js</a></li>
+		<li><a href="https://www.npmjs.org/package/stage-devtools">Stage-devtools</a></li>
+	</ul>
+	
+	<h2>Contact</h2>
+	<p><a href="mailto:bluekvirus@gmail.com">bluekvirus@gmail.com</a></p>
+
 </body>
 </html>
