--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<h2>About me</h2>
 	<ul>
 		<li><a href="https://www.linkedin.com/in/timzhiyuanliu">Linked-in Profile</a></li>
-		<li><a href="mailto:bluekvirus@gmail.com">CV (available on request)</a></li>
+		<li><a href="mailto:bluekvirus@gmail.com?subject=Hi, I need a copy of your CV :)">CV (available on request)</a></li>
 	</ul>
 
 	<h2>Projects</h2>
