--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 	
 	<h2>Contact</h2>
 	<p><a href="mailto:bluekvirus@gmail.com">bluekvirus@gmail.com</a></p>
+	<hr>
+	<p>Copyright © 2012 - 2015 Innobubble.com</p>
 
 </body>
 </html>
