--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-	<h1>Welcome to Tim (Zhiyuan) Liu's Portfolio</h1>
+	<h1>Welcome to Tim Lauv's Portfolio</h1>
 	<hr>
 	<h2>About me</h2>
 	<ul>
