--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</ul>
 	
 	<h2>Contact</h2>
-	<p><a href="mailto:bluekvirus@gmail.com">bluekvirus@gmail.com</a></p>
+	<p><a href="mailto:bluekvirus@gmail.com">bluekvirus (at) gmail (dot) com</a></p>
 	<hr>
 	<p>Copyright © 2012 - 2015 Innobubble.com</p>
 
