--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 	<ul>
 		<li><a href="http://bluekvirus.github.io/Stage.js/">Stage.js</a></li>
 		<li><a href="https://www.npmjs.org/package/stage-devtools">Stage-devtools</a></li>
+		<li><a href="https://pypi.python.org/pypi/django-express">django-express</a></li>
 	</ul>
 	
 	<h2>Contact</h2>
 	<p><a href="mailto:bluekvirus@gmail.com">bluekvirus (at) gmail (dot) com</a></p>
 	<hr>
-	<p>Copyright © 2012 - 2016 Innobubble.com</p>
+	<p>Copyright © 2012 - 2017 Innobubble.com</p>
 
 </body>
 </html>
