--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 	<ul>
 		<li><a href="http://bluekvirus.github.io/Stage.js/">Stage.js</a></li>
 		<li><a href="https://www.npmjs.org/package/stage-devtools">Stage-devtools</a></li>
+		<li><a href="http://bluekvirus.github.io/Stage-unideck">Stage-unideck</a></li>
 		<li><a href="https://pypi.python.org/pypi/django-express">django-express</a></li>
+		<li><a href="https://github.com/bluekvirus/osgi-starterkit"></a></li>
 	</ul>
 	
 	<h2>Contact</h2>
