--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 	<h2>Projects</h2>
 	<ul>
-		<li><a href="http://bluekvirus.github.io/Stage.js/">Stage.js framework (realtime SPA)</a></li>
+		<li><a href="http://bluekvirus.github.io/Stage.js/">Stage.js framework (realtime SPA architecture for complex configure/monitoring managers)</a></li>
 		<li><a href="https://www.npmjs.org/package/stage-devtools">Stage.js cli-tool</a></li>
 		<li><a href="http://bluekvirus.github.io/Stage-unideck">Stage.js unideck (responsive columns, flex box and grid)</a></li>
 		<li><a href="https://pypi.python.org/pypi/django-express">Django express (function and model class as RESTful services)</a></li>
-		<li><a href="https://github.com/bluekvirus/osgi-starterkit">OSGi starter-kit (Felix, Bnd, Gradle and IntelliJ all fits together)</a></li>
+		<li><a href="https://github.com/bluekvirus/osgi-starterkit">OSGi starter-kit (Felix, Bnd, Gradle and IntelliJ all fit together)</a></li>
 	</ul>
 	
 	<h2>Contact</h2>
