--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<h2>Contact</h2>
 	<p><a href="mailto:bluekvirus@gmail.com">bluekvirus (at) gmail (dot) com</a></p>
 	<hr>
-	<p>Copyright © 2012 - 2017 Innobubble.com</p>
+	<p>Copyright © 2012 - 2019 innobubble.com</p>
 
 </body>
 </html>
